tests/compile-fail/Rule_10_3.rs
fn main() {
    let x: u32 = 2;
    let y: u16 = x; //~ ERROR mismatched types
}
